insertion et selection de pack
selection:
http://localhost:8000/api/pack/all/0/10?company=COMP000001&field=title
création:
http://localhost:8000/api/pack

payload:
{
    "companyID": "COMP000001",
    "title": "Test3",
    "discount": 3,
    "startDate": "2026-06-16T14:30:00",
    "endDate": "2026-06-17T14:30:00",
    "activityPack": [
        {
            "activityID": "ACTI000001",
            "duration": 4
        }
    ],
    "hotelsPack": [
        {
            "roomID": "ROOM000003",
            "duration": 7
        }
    ]
}